@@ -8,8 +8,10 @@ import javax.persistence.GeneratedValue;
 import javax.validation.constraints.Size;
 import javax.validation.constraints.NotNull;
 import com.avaje.ebean.annotation.CreatedTimestamp;
-
+import com.fasterxml.jackson.databind.JsonNode;
 import com.avaje.ebean.Model;
+
+// import com.fasterxml.jackson.databind.JsonNode;
 
 @Entity(name = "item")
 public class Item extends Model{
@@ -44,4 +46,33 @@ public class Item extends Model{
 	
 	public static final Find<Long, Item> finder = new Find<Long, Item>(){};
 	
+	
+	public static Item fromJson(JsonNode json) {
+		Long id = null;
+		String title = null;
+		String description = null;
+		Long price = null;
+		String picture_uri = null;
+		if(json.has("id")) {
+			id = json.findPath("id").asLong();
+		} else {
+			// raise;
+		}
+		if(json.has("title")) {
+			title = json.findPath("title").textValue();
+		} else {
+			// raise;
+		}
+		if(json.has("description")) {
+			description = json.findPath("description").textValue();
+		}
+		if(json.has("price")) {
+			price = json.findPath("price").asLong();
+		}
+		if(json.has("picture_uri")) {
+			picture_uri = json.findPath("picture_uri").textValue();
+		}
+		
+		return new Item(id, title, description, price, picture_uri);
+	}
 }
