@@ -353,3 +353,4 @@ db {
 }
 
 ebean.default = ["models.*"]
+applyEvolutions.default=true
